--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,7 +15,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
-    "react-router-hash-link": "^2.4.3",  
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-type-animation": "^3.2.0",
