--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "@testing-library/user-event": "^13.2.1",
     "cra-template": "1.2.0",
     "framer-motion": "^11.18.2",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.479.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.3",
     "react-type-animation": "^3.2.0",
+    "slick-carousel": "^1.8.1",
     "typeface-oswald": "^1.1.13",
     "typeface-poppins": "^1.1.13",
     "typeface-roboto": "^1.1.13",
